remove  PermSize MaxPermSize elimination in JDK 8